syntax = "proto3";

// package go.micro.service
// 2021/01/09 22:02:10 WARNING: Malformed 'go_package' option in "user.proto", please specify: option go_package = ".;go_micro_service_user";
option go_package =  ".;go_micro_service";

service User {
  rpc Register(UserRegisterRequest) returns(UserRegisterResponse) {}
  rpc Login(UserLoginRequest) returns(UserLoginResponse) {}
  rpc GetUserInfo(UserInfoRequest) returns(UserInfoResponse) {}
}

message UserInfoRequest {
  string user_name = 1;
}

message UserInfoResponse {
  string user_id = 1;
  string user_name = 2;
  string first_name = 3;
  string last_name = 4;
}

message UserRegisterRequest {
  string user_name = 1;
  string first_name = 2;
  string last_name = 3;
  string passward = 4;
  //TODO
}

message UserRegisterResponse {
  string message = 1;
}

message UserLoginRequest {
  string user_name = 1;
  string password = 2;
}

message UserLoginResponse {
  bool  is_success = 1;
}